add sponsor heart

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
         font-family: 'SAX2';
         font-weight: unset;
       }
+      h1>a {
+        text-decoration: none;
+        color: #ea4aaa;
+        float: right"
+      }
       body {
         font-size: 125%;
         line-height: 1;
@@ -23,7 +28,7 @@
     </style>
   </head>
   <body>
-    <h1>SAX2<sup style="font-size:50%"> <a href="SAX.ttf">download</a></sup></h1>
+    <h1>SAX2<sup style="font-size:50%"> <a href="SAX.ttf">download</a></sup><a href="https://github.com/sponsors/abrudz">♥</a></h1>
     <p>APL font based on the font from <a href="SAX61.pdf">Sharp APL for Unix</a>, featuring italic slab-serif/curly characters and upright symbols to clearly distinguish classic confusables like Il| Oo0 L⌊ l1</p>
     <p>Supports every special character used by any APL implementation:</p>
     <blockquote style="word-break: break-all;">+-×÷⌈⌊*⍟|!○~∨∧⍱⍲&lt;≤=≥>≠.@≡≢⍴,⍪⍳↑↓?⍒⍋⍉⌽⊖∊⊥⊤⍎⍕⌹⊂⊃∪∩⍷⌷∘→←⎕⍞/⌿\⍀¨⍣&amp;⍨⌶#⊆⍥⊣⊢⍠⍤⌸⌺⍸()[];⍝⋄:⍬{}∇#⍺⍵⍶⍹"ᐵᑈ√⍡⍁∙⌾⍢⍫$…⌂∞⍛⍧%⊇⍮⍭⊙⍦π⍇⍈⍐⍗λχ</blockquote>
@@ -55,5 +60,5 @@ w←⊃(⊃0⍴⍵){                           ⍝┌┌─2─┐       monadic
     <blockquote>APL (named after the book A Programming Language) is a programming language developed in the 1960s by Kenneth E. Iverson. Its central datatype is the multidimensional array. It uses a large range of special graphic symbols to represent most functions and operators, leading to very concise code. It has been an important influence on the development of concept modeling, spreadsheets, functional programming, and computer math packages. It has also inspired several other programming languages.</blockquote>
     <p>And last, but not least, the IPSA logo:</p>
     <div style="text-align: center; font-size: 1000%;">⒮</div>
-</body>
+  </body>
 </html>
