--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       h1>a {
         text-decoration: none;
         color: #ea4aaa;
-        float: right"
+        float: right;
       }
       body {
         font-size: 125%;
