--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </style>
   </head>
   <body>
-    <h1>SAX2<sup style="font-size:50%"> <a href="SAX.ttf">download</a></sup><a href="https://github.com/sponsors/abrudz">♥</a></h1>
+    <h1>SAX2<sup style="font-size:50%"> <a href="SAX.ttf">download</a></sup><a href="https://github.com/sponsors/abrudz" title="Sponsor">♥</a></h1>
     <p>APL font based on the font from <a href="SAX61.pdf">Sharp APL for Unix</a>, featuring italic slab-serif/curly characters and upright symbols to clearly distinguish classic confusables like Il| Oo0 L⌊ l1</p>
     <p>Supports every special character used by any APL implementation:</p>
     <blockquote style="word-break: break-all;">+-×÷⌈⌊*⍟|!○~∨∧⍱⍲&lt;≤=≥>≠.@≡≢⍴,⍪⍳↑↓?⍒⍋⍉⌽⊖∊⊥⊤⍎⍕⌹⊂⊃∪∩⍷⌷∘→←⎕⍞/⌿\⍀¨⍣&amp;⍨⌶#⊆⍥⊣⊢⍠⍤⌸⌺⍸()[];⍝⋄:⍬{}∇#⍺⍵⍶⍹"ᐵᑈ√⍡⍁∙⌾⍢⍫$…⌂∞⍛⍧%⊇⍮⍭⊙⍦π⍇⍈⍐⍗λχ</blockquote>
