add source link

--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
         font-family: 'SAX2';
         font-weight: unset;
       }
-      h1>a {
+      h1>span {
+        float: right;
+      }
+      h1>span>a {
         text-decoration: none;
         color: #ea4aaa;
-        float: right;
       }
       body {
         font-size: 125%;
@@ -25,10 +27,13 @@
         word-break: break-all;
         font-size: 125%;
       }
+      sup{
+        font-size: 50%;
+      }
     </style>
   </head>
   <body>
-    <h1>SAX2<sup style="font-size:50%"> <a href="SAX.ttf">download</a></sup><a href="https://github.com/sponsors/abrudz" title="Sponsor">♥</a></h1>
+    <h1>SAX2<sup> <a href="SAX.ttf">download</a></sup><span><sup><a href="https://github.com/abrudz/SAX2">source</a> </sup><a href="https://github.com/sponsors/abrudz" title="Sponsor">♥</a></span></h1>
     <p>APL font based on the font from <a href="SAX61.pdf">Sharp APL for Unix</a>, featuring italic slab-serif/curly characters and upright symbols to clearly distinguish classic confusables like Il| Oo0 L⌊ l1</p>
     <p>Supports every special character used by any APL implementation:</p>
     <blockquote style="word-break: break-all;">+-×÷⌈⌊*⍟|!○~∨∧⍱⍲&lt;≤=≥>≠.@≡≢⍴,⍪⍳↑↓?⍒⍋⍉⌽⊖∊⊥⊤⍎⍕⌹⊂⊃∪∩⍷⌷∘→←⎕⍞/⌿\⍀¨⍣&amp;⍨⌶#⊆⍥⊣⊢⍠⍤⌸⌺⍸()[];⍝⋄:⍬{}∇#⍺⍵⍶⍹"ᐵᑈ√⍡⍁∙⌾⍢⍫$…⌂∞⍛⍧%⊇⍮⍭⊙⍦π⍇⍈⍐⍗λχ</blockquote>
