--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" /> 
     <title>SAX2 - APL font based on the font from Sharp APL for Unix</title>
@@ -24,17 +24,20 @@
         line-height: 1;
       }
       blockquote {
-        word-break: break-all;
+        -webkit-hyphens: auto;
+        -ms-hyphens: auto;
+        hyphens: auto;
+        text-align: justify;
         font-size: 125%;
       }
-      sup{
+      sup {
         font-size: 50%;
       }
     </style>
   </head>
   <body>
     <h1>SAX2<sup> <a href="SAX.ttf">download</a></sup><span><sup><a href="https://github.com/abrudz/SAX2">source</a> </sup><a href="https://github.com/sponsors/abrudz" title="Sponsor">♥</a></span></h1>
-    <p>APL font based on the font from <a href="SAX61.pdf">Sharp APL for Unix</a>, featuring italic slab-serif/curly characters and upright symbols to clearly distinguish classic confusables like Il| Oo0 L⌊ l1</p>
+    <p>APL font based on the font from <a href="SAX61.pdf">Sharp APL for Unix</a>, featuring italic slab-serif/curly letters from IBM’s Selectric “Italic 12” font paired with upright digits and vertically centered symbols, thus clearly distinguishing classic confusables like Il|, Oo0, L⌊, l1, and even I⌶, ı⍳, a⍺, and w⍵.</p>
     <p>Supports every special character used by any APL implementation:</p>
     <blockquote style="word-break: break-all;">+-×÷⌈⌊*⍟|!○~∨∧⍱⍲&lt;≤=≥>≠.@≡≢⍴,⍪⍳↑↓?⍒⍋⍉⌽⊖∊⊥⊤⍎⍕⌹⊂⊃∪∩⍷⌷∘→←⎕⍞/⌿\⍀¨⍣&amp;⍨⌶#⊆⍥⊣⊢⍠⍤⌸⌺⍸()[];⍝⋄:⍬{}∇#⍺⍵⍶⍹"ᐵᑈ√⍡⍁∙⌾⍢⍫$…⌂∞⍛⍧%⊇⍮⍭⊙⍦π⍇⍈⍐⍗λχ</blockquote>
     <p>And many additional mathematical and typographical symbols:</p>
