--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </style>
   </head>
   <body>
-    <h1>SAX2<sup> <a href="SAX.ttf">download</a></sup><span><sup><a href="https://github.com/abrudz/SAX2">source</a> </sup><a href="https://github.com/sponsors/abrudz" title="Sponsor">♥</a></span></h1>
+    <h1>SAX2<sup> <a href="SAX2.ttf">download</a></sup><span><sup><a href="https://github.com/abrudz/SAX2">source</a> </sup><a href="https://github.com/sponsors/abrudz" title="Sponsor">♥</a></span></h1>
     <p>APL font based on the font from <a href="SAX61.pdf">Sharp APL for Unix</a>, featuring italic slab-serif/curly letters from IBM’s Selectric “Italic 12” font paired with upright digits and vertically centered symbols, thus clearly distinguishing classic confusables like Il|, Oo0, L⌊, l1, and even I⌶, ı⍳, a⍺, and w⍵.</p>
     <p>Supports every special character used by any APL implementation:</p>
     <blockquote style="word-break: break-all;">+-×÷⌈⌊*⍟|!○~∨∧⍱⍲&lt;≤=≥>≠.@≡≢⍴,⍪⍳↑↓?⍒⍋⍉⌽⊖∊⊥⊤⍎⍕⌹⊂⊃∪∩⍷⌷∘→←⎕⍞/⌿\⍀¨⍣&amp;⍨⌶#⊆⍥⊣⊢⍠⍤⌸⌺⍸()[];⍝⋄:⍬{}∇#⍺⍵⍶⍹"ᐵᑈ√⍡⍁∙⌾⍢⍫$…⌂∞⍛⍧%⊇⍮⍭⊙⍦π⍇⍈⍐⍗λχ</blockquote>
