Add editable area

--- a/index.html
+++ b/index.html
@@ -33,11 +33,20 @@
       sup {
         font-size: 50%;
       }
+      textarea {
+        width: 100%;
+        resize: vertical;
+        min-height: 4em;
+        font-size: inherit;
+      }
     </style>
   </head>
   <body>
     <h1>SAX2<sup> <a href="SAX2.ttf">download</a></sup><span><sup><a href="https://github.com/abrudz/SAX2">source</a> </sup><a href="https://github.com/sponsors/abrudz" title="Sponsor">♥</a></span></h1>
     <p>APL font based on the font from <a href="SAX61.pdf">Sharp APL for Unix</a>, featuring italic slab-serif/curly letters from IBM’s Selectric “Italic 12” font paired with upright digits and vertically centered symbols, thus clearly distinguishing classic confusables like Il|, Oo0, L⌊, l1, and even I⌶, ı⍳, a⍺, and w⍵.</p>
+    <blockquote>
+      <textarea autofocus placeholder="Try it yourself ― type here!" spellcheck="false"></textarea>
+    </blockquote>
     <p>Supports every special character used by any APL implementation:</p>
     <blockquote style="word-break: break-all;">+-×÷⌈⌊*⍟|!○~∨∧⍱⍲&lt;≤=≥>≠.@≡≢⍴,⍪⍳↑↓?⍒⍋⍉⌽⊖∊⊥⊤⍎⍕⌹⊂⊃∪∩⍷⌷∘→←⎕⍞/⌿\⍀¨⍣&amp;⍨⌶#⊆⍥⊣⊢⍠⍤⌸⌺⍸()[];⍝⋄:⍬{}∇#⍺⍵⍶⍹"ᐵᑈ√⍡⍁∙⌾⍢⍫$…⌂∞⍛⍧%⊇⍮⍭⊙⍦π⍇⍈⍐⍗λχ</blockquote>
     <p>And many additional mathematical and typographical symbols:</p>
